mule-user-guide/v/3.2/deploying-mule-to-weblogic.adoc
= 将Mule部署到WebLogic

有关在Mule中配置WebLogic JMS的详细信息，请参阅 link:/mule-user-guide/v/3.2/weblogic-jms-integration[WebLogic JMS集成]。

这些说明假定您已经下载并安装了WebLogic Application Server 10.3版。请注意，WebLogic 8.x和9.x也受支持，但这些说明针对BEA Weblogic和Oracle WebLogic上的版本10.3。

*NOTE*：
有关在Weblogic下运行webapp的Mule示例，请从独立发行版中获取webapp示例并进行上述更改。

== 为Mule创建WebLogic域

第一步是使用BEA WebLogic配置向导为Mule创建一个WebLogic域。

. 启动配置向导。例如，在Windows上选择**Start > All Programs > BEA Products > Tools > Configuration Wizard**。
. 在欢迎屏幕中，选择创建新域的选项并点击*Next*。
. 在“选择域来源”屏幕中，选择为WebLogic Server生成域的选项，然后单击*Next*。
. 在配置管理员用户名和密码屏幕中，输入要使用的用户名和密码，然后单击*Next*。
. 在配置服务器启动模式和JDK屏幕中，选择开发模式，选择Sun SDK 1.5而不是JRockit，然后单击*Next*。
. 在自定义环境和服务设置屏幕中，选择*No*，然后点击*Next*。
. 在创建WebLogic域屏幕中，为域名输入`Mule2`，将位置设置为默认用户项目域目录，然后单击*Create*。请注意，您可以使用任何您喜欢的域名，但该页面的其余部分采用名称`Mule2`。
. 域名创建完毕后，点击*Done*。

== 在WebLogic Web应用程序内部署Mule：

.  _必需._覆盖commons-lang，如'Overriding commons-lang'中所述。
. 按照“配置日志记录”中的说明配置日志记录。

== 压倒commons-lang

[WARNING]
====
*Mule requires a a newer version of Commons lang.*

您必须将JAR文件复制到您的域的lib文件夹中并修改您的类路径，以便Mule和WebLogic正确使用它。

请注意，未能完成此步骤会导致读取*`java.lang.LinkageError`*或*`java.lang.ClassCastException`*的错误。
====

. 将您的Mule发行版中的commons-lang.jar文件复制到`<WLHome>/user_projects/domains/<yourdomain>/lib`
. 在`<WLHome>/user_projects/domains/<yourdomain>/bin`目录中，按如下方式修改`startWebLogic.sh/.cmd`文件，以便首先加载`lib`目录中的`commons-lang.jar`。
视窗：

[source, code, linenums]
----
DOMAIN_HOME="<WLHome>/user_projects/domains/<yourdomain>"
PRE_CLASSPATH=%DOMAIN_HOME%/lib/commons-lang-2.4.jar;%PRE_CLASSPATH%
----

Linux的/ OSX：

[source, code, linenums]
----
DOMAIN_HOME="<WLHome>/user_projects/domains/<yourdomain>"
export DOMAIN_HOME
PRE_CLASSPATH=$DOMAIN_HOME/lib/commons-lang-2.4.jar:$PRE_CLASSPATH
export PRE_CLASSPATH
----

== 配置日志记录

Mule使用 http://logging.apache.org/log4j/1.2/index.html[Log4j的]。可以对WebLogic进行配置，以便WebLogic和Mule的日志记录都使用log4j。

. 将`<WLHOME>/wlserver_10.3/server/lib/wllog4j.jar`复制到`<WLHome>/user_projects/domains/<yourdomain>/lib`。
.  http://logging.apache.org/log4j/1.2/download.html[下载] Log4j日志文件。
. 解压缩文件并将`log4j.jar`复制到`<WLHome>/user_projects/domains/<yourdomain>/lib`。
.  http://commons.apache.org/downloads/download_logging.cgi[下载] Commons记录文件。
. 解压缩文件并将`commons-loggin.jar`复制到`<WLHome>/user_projects/domains/<yourdomain>/lib`。
. 启动您的WebLogic域并登录到控制台。
. 在左侧导航窗格中，展开*Environment*，然后选择*Servers*。
. 在Servers表中，单击要配置其日志记录的服务器实例的名称。
. 选择*Logging > General*，然后点击页面底部的*Advanced*。
. 在日志记录实施列表框中，选择*Log4j*。
. 点击*Save*。
. 重新启动WebLogic域以激活更改。

== 部署Mule

有很多方法可以将应用程序部署到WebLogic服务器。这些说明演示了两种最常见的方法：通过自动部署（它为部署测试和评估提供了一种快速方法），并通过管理控制台提供对配置的更多控制。请注意，此部分在部署将Mule嵌入到WebLogic的EAR或WAR时也适用，在这种情况下，您将部署EAR或WAR而不是RAR文件。

==== 自动部署Mule：

. 将`mule-enterprise-jca.rar`复制到`<WLHome>/user_projects/domains/<yourdomain>/autodeploy`目录中。
. 以开发模式重新启动您的域服务器实例。在启动过程中，新的RAR文件将由域服务器自动发现和部署。

==== 使用管理控制台部署Mule：

. 启动WebLogic服务器。例如，在Windows上选择*Start > BEA Products > WebLogic Server*。
. 启动Mule2域的管理服务器。例如，在Windows上，您可以选择*Start > BEA Products > User Projects > <yourdomain> > Start Admin Server for WebLogic Server Domain*。
. 提示时，使用您在创建域时指定的用户名和密码登录到控制台。如果您关闭控制台并稍后需要重新启动它，则可以转到网址`http://localhost:7001/console/console.portal`。
. 在左侧的域结构中，点击*Deployments*。
. 点击*Install*，然后导航到您下载Mule RAR文件的位置。
. 选择RAR文件并点击*Next*。
. 选择*Install this deployment as an application*
. 选择*Next*
. 选择*Finish*
. 在左侧的更改中心中，点击*Activate Change*。

Mule现在通过Mule JCA资源适配器部署到WebLogic。您现在必须使用Mule应用程序的配置文件替换RAR文件中的默认配置文件。

== 替换Vanilla RAR中的Mule配置文件

Mule在`mule-module-jca-core.jar`下的RAR文件中包含名为`mule-config.xml`的占位符配置文件。如果您只是想修改此文件，则可以执行以下操作：

. 解压缩RAR和JAR文件。
. 修改配置文件。
. 用更新后的文件重新包装JAR和RAR，并将RAR复制到`<WLHome>/user_projects/domains/<yourdomain>/autodeploy`目录中。
. 运行`startWebLogic`命令。

如果您想使用其他配置文件，请执行以下操作：

. 解压缩RAR文件并将您的配置文件复制到所有JAR文件所在的顶层。
. 打开`META-INF`文件夹，然后打开`weblogic-ra.xml`进行编辑。
. 紧接在`<enable-global-access-to-classes>true</enable-global-access-to-classes>`条目之后，在`outbound-resource-adapter`之前，添加以下行，其中`echo-axis-config.xml`是您的配置文件的名称：
+

[source, xml, linenums]
----
<properties>
  <property>
    <name>Configurations</name>
    <value>echo-axis-config.xml</value>
  </property>
</properties>
----

. 重新包装RAR文件并将其复制到`autodeploy`目录并运行`startWebLogic`进行部署。
